// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OpenAPI 3.1 — AdditionalProperties & Required (3.1-#21-#22) > 3.1-#21: generates [key: string]: unknown for additionalProperties: true 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type FreeForm = { name?: string; } & { [key: string]: unknown; };"
`;

exports[`OpenAPI 3.1 — AdditionalProperties & Required (3.1-#21-#22) > 3.1-#21: generates Record for additionalProperties on inline object 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Container = { metadata?: Record<string, number>; };"
`;

exports[`OpenAPI 3.1 — AdditionalProperties & Required (3.1-#21-#22) > 3.1-#21: generates index signature for additionalProperties with type 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type StringMap = { [key: string]: string; };"
`;

exports[`OpenAPI 3.1 — AdditionalProperties & Required (3.1-#21-#22) > 3.1-#22: all properties optional when required is absent 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Flexible = { a?: string; b?: number; };"
`;

exports[`OpenAPI 3.1 — AdditionalProperties & Required (3.1-#21-#22) > 3.1-#22: marks required properties without ?, optional properties with ? 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Profile = { username: string; email: string; bio?: string; };"
`;

exports[`OpenAPI 3.1 — Composition & Discriminator (3.1-#9-#12) > 3.1-#9: generates intersection type (&) for allOf 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Pet = { "petType": string; };

export type Cat = Pet & { meow?: boolean; } & { petType: 'cat' };

export type Dog = Pet & { bark?: boolean; } & { petType: 'dog' };

export type PetVariant = ({ petType: 'cat' } & Pet & { meow?: boolean; } & { petType: 'cat' }) | ({ petType: 'dog' } & Pet & { bark?: boolean; } & { petType: 'dog' });

export type MixedUnion = string | number;

export type PetVariant = Cat | Dog;

export type PetVariantVariant = Cat | Dog;"
`;

exports[`OpenAPI 3.1 — Composition & Discriminator (3.1-#9-#12) > 3.1-#10: generates union type (|) for oneOf without discriminator 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Cat = { meow?: boolean; };

export type Dog = { bark?: boolean; };

export type Pet = Cat | Dog;"
`;

exports[`OpenAPI 3.1 — Composition & Discriminator (3.1-#9-#12) > 3.1-#11: generates union type (|) for anyOf 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Pet = { "petType": string; };

export type Cat = Pet & { meow?: boolean; } & { petType: 'cat' };

export type Dog = Pet & { bark?: boolean; } & { petType: 'dog' };

export type PetVariant = ({ petType: 'cat' } & Pet & { meow?: boolean; } & { petType: 'cat' }) | ({ petType: 'dog' } & Pet & { bark?: boolean; } & { petType: 'dog' });

export type MixedUnion = string | number;

export type PetVariant = Cat | Dog;

export type PetVariantVariant = Cat | Dog;"
`;

exports[`OpenAPI 3.1 — Composition & Discriminator (3.1-#9-#12) > 3.1-#12: generates discriminated union with propertyName and mapping 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Pet = { "petType": string; };

export type Cat = Pet & { meow?: boolean; } & { petType: 'cat' };

export type Dog = Pet & { bark?: boolean; } & { petType: 'dog' };

export type PetVariant = ({ petType: 'cat' } & Pet & { meow?: boolean; } & { petType: 'cat' }) | ({ petType: 'dog' } & Pet & { bark?: boolean; } & { petType: 'dog' });

export type MixedUnion = string | number;

export type PetVariant = Cat | Dog;

export type PetVariantVariant = Cat | Dog;"
`;

exports[`OpenAPI 3.1 — Data Types (3.1-#1-#8) > 3.1-#1: maps string type to TypeScript string 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Status = string;"
`;

exports[`OpenAPI 3.1 — Data Types (3.1-#1-#8) > 3.1-#2: maps number type to TypeScript number 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Price = number;"
`;

exports[`OpenAPI 3.1 — Data Types (3.1-#1-#8) > 3.1-#3: maps integer type to TypeScript number 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Count = number;"
`;

exports[`OpenAPI 3.1 — Data Types (3.1-#1-#8) > 3.1-#4: maps boolean type to TypeScript boolean 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Active = boolean;"
`;

exports[`OpenAPI 3.1 — Data Types (3.1-#1-#8) > 3.1-#5: maps array with items to TypeScript T[] 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Tags = string[];"
`;

exports[`OpenAPI 3.1 — Data Types (3.1-#1-#8) > 3.1-#6: maps object with properties to TypeScript interface-like type 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type User = { name: string; age?: number; };"
`;

exports[`OpenAPI 3.1 — Data Types (3.1-#1-#8) > 3.1-#7: maps null type to TypeScript null 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Nothing = null;"
`;

exports[`OpenAPI 3.1 — Data Types (3.1-#1-#8) > 3.1-#8: type arrays > maps type: [integer, null] to number | null 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type NullableInt = number | null;"
`;

exports[`OpenAPI 3.1 — Data Types (3.1-#1-#8) > 3.1-#8: type arrays > maps type: [string, null] to string | null 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type NullableName = string | null;"
`;

exports[`OpenAPI 3.1 — Data Types (3.1-#1-#8) > 3.1-#8: type arrays > maps type: [string, number] to string (first non-null type used) 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Multi = string;"
`;

exports[`OpenAPI 3.1 — Default & Description (3.1-#15-#16) > 3.1-#15: does not crash with default value — property is correctly typed 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Config = { name: string; timeout?: number; };"
`;

exports[`OpenAPI 3.1 — Default & Description (3.1-#15-#16) > 3.1-#16: generates JSDoc comment from description on individual type alias 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** A valid email address */
export type Email = string;"
`;

exports[`OpenAPI 3.1 — Default & Description (3.1-#15-#16) > 3.1-#16: generates JSDoc comment from description on schema 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** A product in the catalog */
export type Product = { name?: string; };"
`;

exports[`OpenAPI 3.1 — Deprecated (3.1-#19) > 3.1-#19: does not crash for schema with deprecated flag — deprecated is stored but not emitted in contracts 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type LegacyType = string;"
`;

exports[`OpenAPI 3.1 — Deprecated (3.1-#19) > 3.1-#19: includes @deprecated JSDoc for deprecated operations 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type GetOldResponse = string;"
`;

exports[`OpenAPI 3.1 — Deprecated (3.1-#19) > 3.1-#19: includes @deprecated JSDoc for deprecated operations 2`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { GetOldResponse } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * @deprecated
     */
    getOld: decorateWithErrors<() => Promise<GetOldResponse>, never>(
      async (): Promise<GetOldResponse> => {
        try {
          const result = await requester<GetOldResponse>("GET", \`/old\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.1 — Enum & Const (3.1-#13-#14) > 3.1-#13: generates boolean literal union for boolean enum 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Flag = true | false;"
`;

exports[`OpenAPI 3.1 — Enum & Const (3.1-#13-#14) > 3.1-#13: generates null-including union for enum with null 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type NullableStatus = 'active' | 'inactive' | null;"
`;

exports[`OpenAPI 3.1 — Enum & Const (3.1-#13-#14) > 3.1-#13: generates number literal union for number enum 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Priority = 1 | 2 | 3;"
`;

exports[`OpenAPI 3.1 — Enum & Const (3.1-#13-#14) > 3.1-#13: generates string literal union for string enum 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Status = 'active' | 'inactive' | 'pending';"
`;

exports[`OpenAPI 3.1 — Enum & Const (3.1-#13-#14) > 3.1-#14: does not crash when const is present with type — type is emitted, const ignored 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type FixedVersion = string;"
`;

exports[`OpenAPI 3.1 — Enum & Const (3.1-#13-#14) > 3.1-#14: produces unknown for const without type (no type handler) 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type JustConst = unknown;"
`;

exports[`OpenAPI 3.1 — Examples, Tier 3 (3.1-#32) > 3.1-#32: 3.0 example single value does not crash and produces same type 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Color = string;"
`;

exports[`OpenAPI 3.1 — Examples, Tier 3 (3.1-#32) > 3.1-#32: 3.1 examples array does not crash and is not emitted in output 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Color = string;"
`;

exports[`OpenAPI 3.1 — Examples, Tier 3 (3.1-#32) > 3.1-#32: both 3.1 examples and 3.0 example produce same TypeScript type 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Name = string;"
`;

exports[`OpenAPI 3.1 — Examples, Tier 3 (3.1-#32) > 3.1-#32: both 3.1 examples and 3.0 example produce same TypeScript type 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Name = string;"
`;

exports[`OpenAPI 3.1 — Examples, Tier 3 (3.1-#32) > 3.1-#32: examples on object schema do not crash 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Product = { name?: string; price?: number; };"
`;

exports[`OpenAPI 3.1 — Exclusive Bounds, Tier 3 (3.1-#30-#31) > 3.1-#30: 3.0 boolean exclusiveMinimum does not crash and produces same type 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type ExclusiveMin = number;"
`;

exports[`OpenAPI 3.1 — Exclusive Bounds, Tier 3 (3.1-#30-#31) > 3.1-#30: 3.1 numeric exclusiveMinimum does not crash 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type ExclusiveMin = number;"
`;

exports[`OpenAPI 3.1 — Exclusive Bounds, Tier 3 (3.1-#30-#31) > 3.1-#30-#31: both exclusive bounds produce same base type in 3.1 and 3.0 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Bounded = number;"
`;

exports[`OpenAPI 3.1 — Exclusive Bounds, Tier 3 (3.1-#30-#31) > 3.1-#30-#31: both exclusive bounds produce same base type in 3.1 and 3.0 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Bounded = number;"
`;

exports[`OpenAPI 3.1 — Exclusive Bounds, Tier 3 (3.1-#30-#31) > 3.1-#31: 3.0 boolean exclusiveMaximum does not crash and produces same type 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type ExclusiveMax = number;"
`;

exports[`OpenAPI 3.1 — Exclusive Bounds, Tier 3 (3.1-#30-#31) > 3.1-#31: 3.1 numeric exclusiveMaximum does not crash 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type ExclusiveMax = number;"
`;

exports[`OpenAPI 3.1 — Format (3.1-#20) > 3.1-#20: generates branded type definition with format tag 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type DateTimeString = string & { readonly __format?: 'date-time' };

export type Timestamp = DateTimeString;"
`;

exports[`OpenAPI 3.1 — Format (3.1-#20) > 3.1-#20: generates branded type for date-time format on string 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type DateTimeString = string & { readonly __format?: 'date-time' };

export type CreatedAt = DateTimeString;"
`;

exports[`OpenAPI 3.1 — Format (3.1-#20) > 3.1-#20: generates branded type for numeric format 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Int32Number = number & { readonly __format?: 'int32' };

export type Score = Int32Number;"
`;

exports[`OpenAPI 3.1 — Format (3.1-#20) > 3.1-#20: generates branded type for uuid format on string 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type UuidString = string & { readonly __format?: 'uuid' };

export type UserId = UuidString;"
`;

exports[`OpenAPI 3.1 — Format (3.1-#20) > 3.1-#20: generates plain string for binary format (no branding) 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type FileData = string;"
`;

exports[`OpenAPI 3.1 — Format (3.1-#20) > 3.1-#20: generates plain string for byte format (no branding) 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Encoded = string;"
`;

exports[`OpenAPI 3.1 — ReadOnly & WriteOnly (3.1-#17-#18) > 3.1-#17: excludes readOnly properties from request body type 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type PostItemsBody = { name: string; password: string; };

export type PostItemsResponse = { name: string; id: string; };"
`;

exports[`OpenAPI 3.1 — ReadOnly & WriteOnly (3.1-#17-#18) > 3.1-#17: excludes readOnly properties from request body type 2`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { PostItemsBody, PostItemsResponse } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * @param body — request body
     */
    postItems: decorateWithErrors<(body: PostItemsBody) => Promise<PostItemsResponse>, never>(
      async (body: PostItemsBody): Promise<PostItemsResponse> => {
        try {
          const result = await requester<PostItemsResponse>("POST", \`/items\`, { body });
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.1 — ReadOnly & WriteOnly (3.1-#17-#18) > 3.1-#17: includes readOnly properties in response type 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type PostItemsBody = { name: string; password: string; };

export type PostItemsResponse = { name: string; id: string; };"
`;

exports[`OpenAPI 3.1 — ReadOnly & WriteOnly (3.1-#17-#18) > 3.1-#17: includes readOnly properties in response type 2`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { PostItemsBody, PostItemsResponse } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * @param body — request body
     */
    postItems: decorateWithErrors<(body: PostItemsBody) => Promise<PostItemsResponse>, never>(
      async (body: PostItemsBody): Promise<PostItemsResponse> => {
        try {
          const result = await requester<PostItemsResponse>("POST", \`/items\`, { body });
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.1 — ReadOnly & WriteOnly (3.1-#17-#18) > 3.1-#18: excludes writeOnly properties from response type 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type PostItemsBody = { name: string; password: string; };

export type PostItemsResponse = { name: string; id: string; };"
`;

exports[`OpenAPI 3.1 — ReadOnly & WriteOnly (3.1-#17-#18) > 3.1-#18: excludes writeOnly properties from response type 2`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { PostItemsBody, PostItemsResponse } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * @param body — request body
     */
    postItems: decorateWithErrors<(body: PostItemsBody) => Promise<PostItemsResponse>, never>(
      async (body: PostItemsBody): Promise<PostItemsResponse> => {
        try {
          const result = await requester<PostItemsResponse>("POST", \`/items\`, { body });
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.1 — ReadOnly & WriteOnly (3.1-#17-#18) > 3.1-#18: includes writeOnly properties in request body type 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type PostItemsBody = { name: string; password: string; };

export type PostItemsResponse = { name: string; id: string; };"
`;

exports[`OpenAPI 3.1 — ReadOnly & WriteOnly (3.1-#17-#18) > 3.1-#18: includes writeOnly properties in request body type 2`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { PostItemsBody, PostItemsResponse } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * @param body — request body
     */
    postItems: decorateWithErrors<(body: PostItemsBody) => Promise<PostItemsResponse>, never>(
      async (body: PostItemsBody): Promise<PostItemsResponse> => {
        try {
          const result = await requester<PostItemsResponse>("POST", \`/items\`, { body });
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.1 — Validation Constraints, Tier 2 (3.1-#23-#29) > 3.1-#23: minItems does not crash and is not emitted in output 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type TagList = string[];"
`;

exports[`OpenAPI 3.1 — Validation Constraints, Tier 2 (3.1-#23-#29) > 3.1-#23-#29: multiple constraints together do not crash 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type BoundedString = string;"
`;

exports[`OpenAPI 3.1 — Validation Constraints, Tier 2 (3.1-#23-#29) > 3.1-#24: maxItems does not crash and is not emitted in output 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type LimitedList = number[];"
`;

exports[`OpenAPI 3.1 — Validation Constraints, Tier 2 (3.1-#23-#29) > 3.1-#25: minLength does not crash and is not emitted in output 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Username = string;"
`;

exports[`OpenAPI 3.1 — Validation Constraints, Tier 2 (3.1-#23-#29) > 3.1-#26: maxLength does not crash and is not emitted in output 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type ShortName = string;"
`;

exports[`OpenAPI 3.1 — Validation Constraints, Tier 2 (3.1-#23-#29) > 3.1-#27: pattern does not crash and is not emitted in output 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Email = string;"
`;

exports[`OpenAPI 3.1 — Validation Constraints, Tier 2 (3.1-#23-#29) > 3.1-#28: minimum does not crash and is not emitted in output 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Age = number;"
`;

exports[`OpenAPI 3.1 — Validation Constraints, Tier 2 (3.1-#23-#29) > 3.1-#29: maximum does not crash and is not emitted in output 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Percentage = number;"
`;
